--- a/Mark3/app/src/main/res/layout/activity_mainpage.xml
+++ b/Mark3/app/src/main/res/layout/activity_mainpage.xml
@@ -1,12 +1,17 @@
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/back2"
     tools:context=".Mainpage">
 
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/container"
+        android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
@@ -16,10 +21,120 @@
          android:layout_gravity="left" instead. -->
     <!-- The drawer is given a fixed width in dp and extends the full height of
          the container. -->
-    <fragment android:id="@+id/navigation_drawer"
-        android:layout_width="@dimen/navigation_drawer_width" android:layout_height="match_parent"
-        android:layout_gravity="start"
+    <fragment
+        android:id="@+id/navigation_drawer"
         android:name="com.example.neeraj.mark3.fragments.NavigationDrawerFragment"
+        android:layout_width="@dimen/navigation_drawer_width"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
         tools:layout="@layout/fragment_navigation_drawer" />
+
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginTop="10sp"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="60dp"
+                android:background="#008b8b"
+                android:gravity="center_horizontal"
+                android:padding="10sp"
+                android:text="Welcome..... Neeraj"
+                android:textColor="#ffffff"
+                android:textSize="30dp"
+                android:textStyle="normal" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:background="#696969"
+                android:gravity="center_horizontal"
+                android:text="Select the service"
+                android:textColor="#ffffff"
+                android:textSize="20dp" />
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:orientation="horizontal"
+                android:weightSum="100">
+
+                <Button
+                    android:id="@+id/bplumber"
+                    android:layout_width="fill_parent"
+                    android:layout_height="100sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="50"
+                    android:background="@drawable/plum1" />
+
+                <Button
+                    android:id="@+id/belectrician"
+                    android:layout_width="fill_parent"
+                    android:layout_height="100sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10sp"
+                    android:layout_weight="50"
+                    android:background="@drawable/elec1"
+                    android:textAllCaps="false"
+                    android:textSize="20dp" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20sp"
+                android:orientation="horizontal"
+                android:textAllCaps="false"
+                android:weightSum="100">
+
+                <Button
+                    android:id="@+id/bpainter"
+                    android:layout_width="fill_parent"
+                    android:layout_height="100sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="5dp"
+                    android:layout_weight="50"
+                    android:background="@drawable/paint1" />
+
+                <Button
+                    android:id="@+id/bmechanic"
+                    android:layout_width="fill_parent"
+                    android:layout_height="100sp"
+                    android:layout_marginLeft="5dp"
+                    android:layout_marginRight="10sp"
+                    android:layout_weight="50"
+                    android:background="@drawable/mech1"
+
+                    />
+
+            </LinearLayout>
+
+
+            <Button
+                android:id="@+id/bexit"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="50dp"
+                android:background="@drawable/smalllineargreen"
+                android:padding="15dp"
+                android:text="Exit"
+                android:textAllCaps="false"
+                android:textColor="#ffffff" />
+
+
+        </LinearLayout>
+    </ScrollView>
 
 </android.support.v4.widget.DrawerLayout>
