--- a/Mark3/app/src/main/res/layout/loginpage.xml
+++ b/Mark3/app/src/main/res/layout/loginpage.xml
@@ -7,11 +7,10 @@
     android:weightSum="1"
     tools:context=".MyActivity$PlaceholderFragment">
 
+
     <ScrollView
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-
-        >
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -19,13 +18,36 @@
             android:layout_marginTop="12dp"
             android:orientation="vertical">
 
-            <ImageView
-                android:layout_width="220dp"
-                android:layout_height="200dp"
-                android:layout_gravity="center"
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginBottom="15dp"
-                android:background="@drawable/goicon" />
+                android:gravity="center"
+                android:text="Blue Collar Services"
+                android:textSize="24sp" />
 
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:layout_width="220dp"
+                    android:layout_height="200dp"
+                    android:layout_gravity="center"
+                    android:layout_marginBottom="15dp"
+                    android:background="@drawable/goicon" />
+
+                <ProgressBar
+                    android:id="@+id/progressBar"
+                    style="?android:attr/progressBarStyleLarge"
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:visibility="invisible" />
+
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -52,8 +74,8 @@
                     android:layout_marginRight="25sp"
                     android:layout_marginTop="10sp"
                     android:gravity="center"
-                    android:numeric="integer"
                     android:hint="Password"
+                    android:numeric="integer"
                     android:password="true" />
 
                 <Button
@@ -65,7 +87,7 @@
                     android:layout_marginRight="50sp"
                     android:layout_marginTop="10sp"
                     android:layout_weight="0.25"
-                    android:background="@drawable/smalllinear"
+                    android:background="@drawable/smalllineargreen"
                     android:gravity="center"
                     android:text="Login"
                     android:textColor="#ffffff" />
@@ -81,14 +103,14 @@
                 android:layout_marginRight="50sp"
                 android:layout_weight="0.25"
                 android:orientation="vertical"
-                android:paddingTop="25dp">
+                android:paddingTop="35dp">
 
                 <TextView
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="15dp"
                     android:gravity="center"
-                    android:text="or" />
+                    android:text="Not connected with us yet ?" />
 
                 <Button
                     android:id="@+id/bsignup"
@@ -96,7 +118,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.25"
-                    android:background="@drawable/smalllinear"
+                    android:background="@drawable/smalllineargreen"
                     android:gravity="center"
                     android:text="Sign Up"
                     android:textColor="#ffffff" />
