--- a/Mark3/app/src/main/res/layout/signup.xml
+++ b/Mark3/app/src/main/res/layout/signup.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#dcdcdc"
+    android:background="@drawable/back2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -28,14 +28,14 @@
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="267sp"
+                    android:layout_height="240sp"
 
                     >
 
                     <ImageView
                         android:id="@+id/imageview_propicfb"
                         android:focusable="true"
-                        android:layout_width="150sp"
+                        android:layout_width="130sp"
                         android:layout_height="match_parent"
                         android:layout_gravity="center"
                         android:src="@drawable/profilepic"
@@ -62,7 +62,7 @@
 
                 <LinearLayout
                     android:layout_width="fill_parent"
-                    android:layout_height="40dp"
+                    android:layout_height="50dp"
                     android:orientation="horizontal">
 
                     <TextView
@@ -93,7 +93,7 @@
 
                <LinearLayout
                    android:layout_width="fill_parent"
-                   android:layout_height="40dp"
+                   android:layout_height="50dp"
                    android:orientation="horizontal">
 
                    <TextView
@@ -125,7 +125,7 @@
 
                  <LinearLayout
                android:layout_width="fill_parent"
-               android:layout_height="40dp"
+               android:layout_height="50dp"
                android:orientation="horizontal">
 
                <TextView
@@ -158,7 +158,7 @@
 
            <LinearLayout
                    android:layout_width="fill_parent"
-                   android:layout_height="40dp"
+                   android:layout_height="50dp"
                    android:orientation="horizontal">
 
                    <TextView
@@ -199,7 +199,7 @@
                 android:text="Sign up"
                 android:id="@+id/buttonsignup"
                 android:textAllCaps="false"
-                android:background="@drawable/smalllinear"
+                android:background="@drawable/smalllineargreen"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:padding="5sp"
