--- a/Mark3/app/src/main/res/layout/startscreen.xml
+++ b/Mark3/app/src/main/res/layout/startscreen.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/back2"
+    android:orientation="vertical"
+    >
 
     <ImageView
         android:layout_width="fill_parent"
-        android:layout_height="400sp"
-        android:layout_marginTop="90sp"
-        android:background="@drawable/goicon"
-        android:layout_gravity="center_vertical" />
+        android:layout_height="fill_parent"
+        android:layout_gravity="center"
+        android:layout_marginTop="15dp"
+        android:src="@drawable/bluecollarstart" />
+
 
 </LinearLayout>
